# autodrive_roboracer_ws

./: .gitattributes  .gitignore  README.md  devkit-final.bash  devkit-startup.bash  devkit.Dockerfile  docker-compose.final.yml  docker-compose.yml  simulator-startup.bash  simulator.Dockerfile
.devcontainer/: devcontainer.json  docker-compose.yml
src/: .clangd
src/autodrive_bridge/: CMakeLists.txt  package.xml
src/autodrive_bridge/launch/: bridge.launch.py
src/autodrive_bridge/src/: ackermann_to_autodrive_node.cpp  wheel_odometry_node.cpp
src/autodrive_devkit/: package.xml  setup.py
src/autodrive_devkit/autodrive_f1tenth/: teleop_keyboard.py
src/control/: package.xml  setup.py
src/reactive_control/: package.xml  setup.cfg  setup.py
src/reactive_control/reactive_control/: wall_follow_node.py
src/test_pkg/: package.xml  setup.py
src/test_pkg/test_pkg/: wall_follow_node.py
