<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reactive_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nicolas_lauzon@outlook.com">root</maintainer>
  <license>Apache-2.0</license>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ackermann_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
